--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -29,6 +29,7 @@
 
       <li><a href="../about_us/">About us</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../accomdations/">accommodations</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
@@ -60,6 +61,7 @@
 
       <li><a href="../about_us/">About us</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../accomdations/">accommodations</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
@@ -116,7 +118,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
 
@@ -136,6 +138,9 @@
           <p class="card-detail">“Mastering others is strength. Mastering oneself is true power.” - Lao Tzu
             Welcome to the Drone Challenge, a competition designed to test your skills in controlling drones. 
             This challenge is not just about flying a drone, but about mastering the art of control. It’s about precision, agility, and strategy. 
+            This challenge is not just about flying a drone, but about mastering the art of control. It’s about precision, agility, and strategy. 
+            It’s about navigating through obstacles, performing tasks, and completing missions. 
+            This challenge is not just about flying a drone, but about mastering the art of control. It’s about precision, agility, and strategy.
             It’s about navigating through obstacles, performing tasks, and completing missions. 
             So, gear up, take control, and let your drone soar to new heights. May the best controller win!</p>
 
@@ -158,7 +163,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -196,7 +201,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -233,7 +238,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -270,7 +275,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -311,7 +316,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -395,7 +400,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -447,7 +452,9 @@
         </div>
         <h2 class="card-title">Web Hackathon</h2>
         <p class="card-detail">Just add your desired image size (width & height) after our URL, and you'll get a
-          random image.https://picsum.photos/200/300</p>
+          random image.https://picsum.photos/200/300 <br>
+          Note: this event is conducted on both the days
+        </p>
 
         <div class=" but">
           <button class="button button--line button--effect-1">
@@ -468,7 +475,7 @@
                   d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
               </svg>
             </span>
-            <span class="button__text">Register</span>
+            <a href="../accomdations/index.html"><span class="button__text">Register</span></a> 
           </button>
         </div>
       </label>
@@ -518,7 +525,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -554,7 +561,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -591,7 +598,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
           <label>
@@ -639,7 +646,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -675,7 +682,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day3.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -712,7 +719,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -761,7 +768,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -799,7 +806,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -837,7 +844,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/day2.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -885,7 +892,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
@@ -1257,7 +1264,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="../accomdations/index.html"><span class="button__text">Register</span></a> 
             </button>
           </div>
         </label>
