--- a/pages/under-construction-template-master/index.html
+++ b/pages/under-construction-template-master/index.html
@@ -38,6 +38,7 @@
       <li><a href="../about_us/index.html">About Us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/">Guests</a></li>
+      <li><a href="../accomdations/">accommodations</a></li>
       <li><a href="../under-construction-template-master/">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/">Initiatives</a></li>
@@ -66,6 +67,7 @@
       <li><a href="../about_us/index.html">About Us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/">Guests</a></li>
+      <li><a href="../accomdations/">accommodations</a></li>
       <li><a href="../under-construction-template-master/">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/">Intiatives</a></li>
