--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
                   </a>
                 </li>
                 <li class="nav-item hidden">
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/accomdations/index.html">
+                    <span style="font-family: 'MyFont'; color: white">ACCOMMODATIONS</span>
+                  </a>
+                </li>
+                <li class="nav-item hidden">
                   <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/under-construction-template-master/index.html">
                     <span style="font-family: 'MyFont'; color: white">EXHIBITS</span>
                   </a>
@@ -231,6 +236,11 @@
             <li class="nav-item">
               <a class="navbar-brand" style="font-size: 1vw" href="./pages/under-construction-template-master/index.html">
                 <span style="font-family: 'MyFont'; color: white">GUESTS</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="navbar-brand" style="font-size: 1vw" href="./pages/accomdations/index.html">
+                <span style="font-family: 'MyFont'; color: white">ACCOMMODATIONS</span>
               </a>
             </li>
             <li class="nav-item">
