--- a/pages/coming_soon/index.html
+++ b/pages/coming_soon/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../../favicon.png" rel="icon" />
-    <title>Wissenaire'23 | Comming Soon</title>
+    <title>Wissenaire'24 | Comming Soon</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
@@ -56,6 +56,7 @@
 
           <li><a href="../competitions/">Competitions</a></li>
           <li><a href="../coming_soon/">Guests</a></li>
+          <li><a href="../accomdations/">accommodations</a></li>
           <li><a href="../coming_soon/">Exhibits</a></li>
           <li><a href="https://witp.wissenaire.org/">Winter Internship</a></li>
           <li><a href="../workshops/">Workshops</a></li>
