--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -870,7 +870,7 @@
           <div class="card-image">
             <img src="../../imagesnew/ml.jpg">
           </div>
-          <h2 class="card-title">ML Hackathon</h2>
+          <h2 class="card-title">ML Competition</h2>
           <p class="card-detail">We are glad to encourage all passionate data enthusiasts and aspiring AI engineers to take part in our exciting competition. This hackathon will challenge participants to solve an innovative Machine Learning topic.  Join us as we investigate artificial intelligence and the potential of creativity!</p>
 
           <div class=" but">
@@ -992,9 +992,10 @@
           <img src="../../imagesnew/Tradesmith.png">
         </div>
         <h2 class="card-title">Shutter</h2>
-        <p class="card-detail">Just add your desired image size (width & height) after our URL, and you'll get a
-          random image.https://picsum.photos/200/300</p>
-
+        <p class="card-detail">Shutter is a photography competition that celebrates the art of photography 
+          and provides a platform for photographers to showcase their talent. <br>
+          Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b>
+        </p>
         <div class=" but">
           <button class="button button--line button--effect-1">
             <span class="morph-shape"
@@ -1014,7 +1015,7 @@
                   d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
               </svg>
             </span>
-            <span class="button__text">Register</span>
+            <a href="https://rzp.io/l/Wshutter"><span class="button__text">Register</span></a>
           </button>
         </div>
       </label>
@@ -1039,9 +1040,10 @@
           <div class="card-image">
             <img src="../../imagesnew/call of duty.png">
           </div>
-          <h2 class="card-title">Call Of Duty: Mobile</h2>
-          <p class="card-detail">Gear up, COD legends, and get ready to compete against the top gamers in this
-            tournament as Wissenaire'24 is hosting a thrilling gaming tournament with prize money.
+          <h2 class="card-title">Freefire</h2>
+          <p class="card-detail">Gear up, Freefire legends, and get ready to compete against the top gamers in this
+            tournament as Wissenaire'24 is hosting a thrilling gaming tournament with prize money.<br>
+            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b> /person
           </p>
 
           <div class=" but">
@@ -1063,7 +1065,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="https://rzp.io/l/Wfreefire"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -1079,8 +1081,8 @@
           <h2 class="card-title">Valorant</h2>
           <p class="card-detail">A passionate gamer? Do weapons titillate you? Ready for a tough challenge? Team
             Wissenaire'24 Valorant Tournament sets kill-hungry gamers against each other. Do you have "Defy the limits"
-            potential?
-
+            potential?<br>
+            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b> /person
           </p>
 
           <div class=" but">
@@ -1102,7 +1104,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="https://rzp.io/l/WValorant"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -1117,7 +1119,8 @@
           </div>
           <h2 class="card-title">Battle Grounds: Mobile</h2>
           <p class="card-detail">Hey! Enthusiasts of Battlegrounds Mobile India, Explore the strategic realm of
-            fighting, sharpshooting, and survival. Are you ready to show off your gaming and IT skills?
+            fighting, sharpshooting, and survival. Are you ready to show off your gaming and IT skills?<br>
+            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b> /person
           </p>
 
           <div class=" but">
@@ -1139,7 +1142,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="https://rzp.io/l/Wbgmi"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -1154,8 +1157,9 @@
           </div>
           <h2 class="card-title">Clash Royale</h2>
           <p class="card-detail">Just add your desired image size (width & height) after our URL, and you'll get a
-            random image.https://picsum.photos/200/300</p>
-
+            random image.https://picsum.photos/200/300<br>
+            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b>
+          </p>
           <div class=" but">
             <button class="button button--line button--effect-1">
               <span class="morph-shape"
@@ -1175,7 +1179,7 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Register</span>
+              <a href="https://rzp.io/l/WClashroyale"><span class="button__text">Register</span></a>
             </button>
           </div>
         </label>
@@ -1206,7 +1210,6 @@
           <p class="card-detail">Want to brighten your day with quizzes? Quizzaire has technical domain-specific rounds!
             Prepare to explore the world of quizzing!
           </p>
-
           <div class=" but">
             <button class="button button--line button--effect-1">
               <span class="morph-shape"
@@ -1243,7 +1246,7 @@
           <p class="card-detail">"Hola, vloggers! If content creation is your passion, Wissenaire gives you a platform. 
             Cover your experience with Wissenaire during the three-day fest at IIT Bhubaneswar. This competition challenges vloggers to 
             showcase their storytelling prowess by capturing the fest's energy, innovation, and excitement. Unleash your creativity,
-             document the fest like never before, and compete for the title of Vlogging Champion!"</p>
+             document the fest like never before, and compete for the title of Vlogging Champion!"</p>
 
           <div class=" but">
             <button class="button button--line button--effect-1">
