--- a/pages/accomdations/index.html
+++ b/pages/accomdations/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../../css/cursor.css">
 </head>
 
 <body>
@@ -68,6 +69,9 @@
 
     </ul>
   </nav>
+  <div class="cur" id="circle" style="position: absolute;">
+    <img class="satelite" src="../../imagesnew/Untitled-1.png" alt="" />
+  </div>
   <h1 class="singup" id="head" style="display: flex;justify-content: center;text-align: center;">Accomdations &
     packages
   </h1>
@@ -111,9 +115,20 @@
       let contents = document.getElementsByClassName('data')
       let bigdata = document.getElementsByClassName("bigdata")
       let api = [
-        `<b style="color:aqua">Charges for 2 days and 3 nights </b>:<br>
-      Common room- 1049 Rs/-<br>
-      Single room-1449 Rs/-<br>
+        `
+      <ul>
+        <li>Includes STARNITE pass.</li>
+        <li>Free Merchandise of Wissenaire’24.</li>
+        <li>Includes Day-2 and Day-3 Events & Competitions pass.</li>
+        <li>Free access to all the exhibits.</li>
+        <li>Free access to few informal games.</li>
+      </ul>
+      <br>
+      <br>
+      <div class="lvl" style="display:flex"><div>
+      <b style="color:aqua">Charges for 2 days and 3 nights </b>:<br>
+      Common room- 1249 Rs/-<br>
+      Single room-1649 Rs/-<br></div>
       <div class="btn-container">
       <a href="https://rzp.io/l/W2dayAcc"
         style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
@@ -122,10 +137,12 @@
         here</span>
           </button></a>
         </div>
+        </div>
         <br><br>
+      <div class="lvl" style="display:flex"><div>
       <b style="color:aqua">Charges for 3 days and 4 nights</b> :<br>
-      Common room- 1249 Rs/-<br>
-      Single room-1649 Rs/-<br>
+      Common room- 1449 Rs/-<br>
+      Single room-1849 Rs/-<br></div>
       <div class="btn-container">
       <a href="https://rzp.io/l/W3daysAcc"
         style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
@@ -133,21 +150,31 @@
             <span style="align-items:center"> click
         here</span>
           </button></a>
-        </div>
+        </div></div>
         <br><br>
-      <b>NOTE</b>: Food is not included with this package. During payment, you will be given the choice of a common room or a
-      single room. For food kindly pay separately in food tab.`,
+      <b>NOTE</b>:<br>1. Extra charges of Rs.250 for food per day (Includes breakfast, lunch &
+dinner) should be paid separately prior to visiting campus if required.<br>
+2. In Single rooms a maximum of 2 members will be accommodated.<br>
+3. In Common rooms a maximum of 12 members will be accommodated.`,
         ` <b style="margin-bottom: 50px;">THIS IS ONLY FOR WORKSHOP ATTENDIES</b>
         <br>
         <br>
+      <ul>
+        <li>Includes STARNITE pass.</li>
+        <li>Free Merchandise of Wissenaire’24.</li>
+        <li>Includes Day-2 and Day-3 Events & Competitions pass.</li>
+        <li>Free access to all the exhibits.</li>
+        <li>Free access to few informal games.</li>
+      </ul>
         <b style="color:aqua">Charges for 2 days and 3 nights </b>:<br>
       Common room- 749 Rs/-<br>
-      Single room-1249 Rs/-<br>
+      Single room-1249 Rs/-<br><br>
       <a
         style="color:aquamarine; display: flex;justify-content: center;text-align:justify;text-decoration: underline;columns: #dadada;">Kindly pay this amount while registering for the workshop itself.</a>
-        <b style="color:aqua">Charges for 3 days and 4 nights </b>:<br>
+        <br><br>
+      <div class="lvl" style="display:flex"><div><b style="color:aqua">Charges for 3 days and 4 nights </b>:<br>
       Common room- 1049 Rs/-<br>
-      Single room-1449 Rs/-<br>
+      Single room-1449 Rs/-<br></div>
       <div class="btn-container">
       <a href="https://rzp.io/l/Wworkacc3d"
         style="display: flex;justify-content: center;text-decoration: underline;">
@@ -155,10 +182,12 @@
             <span style="align-items:center"> click
         here</span>
           </button></a>
-        </div>
+        </div></div>
         <br><br>
-      <b>NOTE</b>: Food is not included with this package. During payment, you will be given the choice of a common room or a
-      single room. For food kindly pay separately in food tab.`,
+      <b>NOTE</b>:<br>1. Extra charges of Rs.250 for food per day (Includes breakfast, lunch &
+dinner) should be paid separately prior to visiting campus if required.<br>
+2. In Single rooms a maximum of 2 members will be accommodated.<br>
+3. In Common rooms a maximum of 12 members will be accommodated.`,
         `
         <b>prize</b>: 299 Rs
         <br><br>
@@ -207,8 +236,14 @@
       </div>
       <div style="display: flex;width: 100%;">
         <p style="display: flex; width: 50%;">Robo Soccer</p>
-        <p style="display: flex; width: 50%;">ML Hackathon</p>
-      </div>`,
+        <p style="display: flex; width: 50%;">ML competetions</p>
+      </div>
+      <b>note</b><br>:1. Passes are mandatory for all those who did not apply for any
+workshops or accommodation.<br>2. Day 2 pass includes entry to all competitions on March 9th along with
+few informal games and all exhibits.
+
+
+      `,
         `
         <b>prize</b>: 399 Rs
         <br><br>
@@ -261,7 +296,12 @@
       </div>
       <div style="display: flex;width: 100%;justify-content:center">
         <p style="display: flex; width: 50%;">ML Hackathon</p>
-      </div>`, `
+      </div>
+      <b>note</b>:<br>1. Passes are mandatory for all those who did not apply for any
+workshops or accommodation.<br>2. Day 3 pass includes entry to STARNITE, all competitions on March 10th
+along with few informal games and all exhibits.
+
+`, `
       <b>prize</b>:500 Rs
       <br><br>
       -includes breakfast ,lunch and dinner for 2 days
@@ -334,6 +374,18 @@
       nav.classList.toggle('active');
       btn.classList.toggle('active');
     })
+  </script>
+  <script>
+    let links = document.querySelector(".main-content a");
+    const cursors = document.querySelector(".cur");
+    document.addEventListener("mousemove", (e) => {
+      let x = e.pageX;
+      let y = e.pageY;
+      cursors.setAttribute(
+        "style",
+        "top: " + (e.pageY - 23) + "px; left: " + (e.pageX - 23) + "px;"
+      );
+    });
   </script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
