--- a/pages/accomdations/index.html
+++ b/pages/accomdations/index.html
@@ -165,13 +165,20 @@ dinner) should be paid separately prior to visiting campus if required.<br>
         <li>Includes Day-2 and Day-3 Events & Competitions pass.</li>
         <li>Free access to all the exhibits.</li>
         <li>Free access to few informal games.</li>
-      </ul>
+      </ul><br>
+      <div class="lvl" style="display:flex"><div>
         <b style="color:aqua">Charges for 2 days and 3 nights </b>:<br>
       Common room- 749 Rs/-<br>
-      Single room-1249 Rs/-<br><br>
-      <a
-        style="color:aquamarine; display: flex;justify-content: center;text-align:justify;text-decoration: underline;columns: #dadada;">Kindly pay this amount while registering for the workshop itself.</a>
-        <br><br>
+      Single room-1249 Rs/-<br><br></div>
+      <div class="btn-container">
+      <a href="https://rzp.io/l/W2dayworkacc"
+        style="display: flex;justify-content: center;text-decoration: underline;">
+          <button class="btn custom-btn btn-5 register">
+            <span style="align-items:center"> click
+        here</span>
+          </button></a>
+        </div></div>
+      <br><br>
       <div class="lvl" style="display:flex"><div><b style="color:aqua">Charges for 3 days and 4 nights </b>:<br>
       Common room- 1049 Rs/-<br>
       Single room-1449 Rs/-<br></div>
@@ -237,7 +244,7 @@ dinner) should be paid separately prior to visiting campus if required.<br>
       <div style="display: flex;width: 100%;">
         <p style="display: flex; width: 50%;">Robo Soccer</p>
         <p style="display: flex; width: 50%;">ML competetions</p>
-      </div>
+      </div><br><br>
       <b>note</b><br>:1. Passes are mandatory for all those who did not apply for any
 workshops or accommodation.<br>2. Day 2 pass includes entry to all competitions on March 9th along with
 few informal games and all exhibits.
@@ -293,10 +300,7 @@ few informal games and all exhibits.
       <div style="display: flex;width: 100%;justify-content:center">
         <p style="display: flex;width: 50%;">lan wars</p>
         <p style="display: flex;width: 50%;">Trekkon</p>
-      </div>
-      <div style="display: flex;width: 100%;justify-content:center">
-        <p style="display: flex; width: 50%;">ML Hackathon</p>
-      </div>
+      </div><br><br>
       <b>note</b>:<br>1. Passes are mandatory for all those who did not apply for any
 workshops or accommodation.<br>2. Day 3 pass includes entry to STARNITE, all competitions on March 10th
 along with few informal games and all exhibits.
