--- a/pages/accomdations/index.html
+++ b/pages/accomdations/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ACCOMDATIONS</title>
+  <title>Wissenaire'24 |Accommodation</title>
   <link rel="stylesheet" href="./style.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../../css/cursor.css">
+  <link rel="shortcut icon" href="../../imagesnew/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -72,15 +73,15 @@
   <div class="cur" id="circle" style="position: absolute;">
     <img class="satelite" src="../../imagesnew/Untitled-1.png" alt="" />
   </div>
-  <h1 class="singup" id="head" style="display: flex;justify-content: center;text-align: center;">Accomdations &
+  <h1 class="singup" id="head" style="display: flex;justify-content: center;text-align: center;">Accommodations &
     packages
   </h1>
   <main>
-    <button class="content">accomidation(non-workshops)
+    <button class="content">accommodation(non-workshops)
     </button>
     <div class="data">
     </div>
-    <button class="content">accomidation(workshop)
+    <button class="content">accommodation(workshop)
     </button>
     <div class="data">
     </div>
