--- a/pages/accomdations/index.html
+++ b/pages/accomdations/index.html
@@ -74,7 +74,7 @@
     <img class="satelite" src="../../imagesnew/Untitled-1.png" alt="" />
   </div>
   <h1 class="singup" id="head" style="display: flex;justify-content: center;text-align: center;">Accommodations &
-    packages
+    Passes
   </h1>
   <main>
     <button class="content">accommodation(non-workshops)
@@ -162,7 +162,6 @@ dinner) should be paid separately prior to visiting campus if required.<br>
         <br>
       <ul>
         <li>Includes STARNITE pass.</li>
-        <li>Free Merchandise of Wissenaire’24.</li>
         <li>Includes Day-2 and Day-3 Events & Competitions pass.</li>
         <li>Free access to all the exhibits.</li>
         <li>Free access to few informal games.</li>
